Added a css file for styling of the page

--- a/hobbies.html
+++ b/hobbies.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Tom Myers - Hobbies</title>
   <script src="scripts/basicLinks.js"></script>
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body onload="loadLinks()">
