--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Tom's Personal Site</title>
+  <link rel="stylesheet" href="/css/styles.css">
   <script src="scripts/basicLinks.js"></script>
-
-
 </head>
 
-<body onload="loadLinks()">
+<body onload="loadLinks()" style="background-color: #393E46;">
   <table cellspacing="20">
     <tr>
       <td>
