--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Tom Myers - Contact Me</title>
   <script src="scripts/basicLinks.js"></script>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">2
 </head>
 
 <body onload="loadLinks()">
