--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="scripts/basicLinks.js"></script>
 </head>
 
-<body onload="loadLinks()" style="background-color: #393E46;">
+<body onload="loadLinks()">
   <table cellspacing="20">
     <tr>
       <td>
