Added break tag after these include

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </h2>
   <hr />
   <h4>Diploma of IT (General) - University of Ballarat</h4>
-  <strong>These include:</strong>
+  <strong>These include:</strong><br>
   <table border="1" cellpadding="5">
     <tr>
       <td>
