Adding links to Udemy course and AppBrewery homepage

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
   <hr>
   <p>
-    Learner and somewhat skilled programmer looking to enhance knowledge and skillset by completing Boot Camp 2022 coursework created by the App Brewewry.
+    Learner and somewhat skilled programmer looking to enhance knowledge and skillset by completing <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2022 Web Development Bootcamp</a>
+course on Udemy created by the <a href="https://appbrewery.com/">App Brewery</a> .
   </p>
 
   <hr>
