Updated index.html moving skills to another area of the page

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
       </td>
     </tr>
   </table>
-
-
   <hr>
   <p>
     Learner and somewhat skilled programmer looking to enhance knowledge and skillset by completing <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2022 Web Development Bootcamp</a>
@@ -37,7 +35,34 @@ course on Udemy created by the <a href="https://appbrewery.com/">App Brewery</a>
   </h2>
   <hr />
   <h4>Diploma of IT (General) - University of Ballarat</h4>
-  <strong>These include:</strong><br>
+  <h4>The Complete 2022 Web Developer Bootcamp (In Progress)</h4>
+  <hr />
+  <h3>Work Experience</h3>
+
+  <table border="1px" cellpadding="5">
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2021 - Present</td>
+        <td>IT Service Desk Analyst at API</td>
+      </tr>
+      <tr>
+        <td>2021</td>
+        <td>Exports Coordinator at Secon Freight Logistics</td>
+      </tr>
+      <tr>
+        <td>2013 - 2020</td>
+        <td>Operations/IT Support Manager at CITO Transport</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <strong>Skills</strong><br><br>
   <table border="1" cellpadding="5">
     <tr>
       <td>
@@ -73,33 +98,6 @@ course on Udemy created by the <a href="https://appbrewery.com/">App Brewery</a>
         </table>
       </td>
     </tr>
-  </table>
-
-  <h4>The Complete 2022 Web Developer Bootcamp</h4>
-  <hr />
-  <h3>Work Experience</h3>
-
-  <table border="1px" cellpadding="5">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2021 - Present</td>
-        <td>IT Service Desk Analyst at API</td>
-      </tr>
-      <tr>
-        <td>2021</td>
-        <td>Exports Coordinator at Secon Freight Logistics</td>
-      </tr>
-      <tr>
-        <td>2013 - 2020</td>
-        <td>Operations/IT Support Manager at CITO Transport</td>
-      </tr>
-    </tbody>
   </table>
 
   <p id="links">
