Added additional skills to index.html

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@ course on Udemy created by the <a href="https://appbrewery.com/">App Brewery</a>
             <td>Unreal Engine</td>
             <td>⭐⭐</td>
           </tr>
+          <tr>
+            <td>C++</td>
+            <td>⭐⭐</td>
+          </tr>
         </table>
       </td>
       <td>
@@ -92,8 +96,12 @@ course on Udemy created by the <a href="https://appbrewery.com/">App Brewery</a>
             <td>⭐⭐⭐⭐</td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
+            <td>C#</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Java</td>
+            <td>⭐⭐⭐</td>
           </tr>
         </table>
       </td>
