Added additional skills to index.html

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@ course on Udemy created by the <a href="https://appbrewery.com/">App Brewery</a>
       <td>
         <table>
           <tr>
-            <td>Programming</td>
-            <td>⭐⭐⭐⭐</td>
+            <td>JavaScript</td>
+            <td>⭐⭐⭐</td>
           </tr>
           <tr>
             <td>Networking</td>
-            <td>⭐⭐⭐</td>
+            <td>⭐⭐</td>
           </tr>
           <tr>
             <td>Unreal Engine</td>
