Added line break to quick bio

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </table>
   <hr>
   <p>
-    Learner and somewhat skilled programmer looking to enhance knowledge and skillset by completing <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2022 Web Development Bootcamp</a>
+    Learner and somewhat skilled programmer looking to enhance knowledge and skillset by completing <br><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2022 Web Development Bootcamp</a>
 course on Udemy created by the <a href="https://appbrewery.com/">App Brewery</a> .
   </p>
 
