Amended list of hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -15,7 +15,9 @@
     <li>Martial Arts</li>
     <li>Programming</li>
     <li>Game Development</li>
-    <li>Outdooes</li>
+    <li>Camping</li>
+    <li>Bush Walking</li>
+    <li>Snowboarding</li>
   </ul>
   <hr />
 <p id="links"></p>
