Adde Gamedev page, updated hobbies and index page

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <h1>Tom Myers</h1>
         <h3>IT Service Desk Analyst</h3>
         <p>
-          <strong><em>Learning Man!</em></strong>
+          <strong><em>Look forward to learning!</em></strong>
         </p>
       </td>
     </tr>
   </table>
   <hr>
   <p>
-    Learner and somewhat skilled programmer looking to enhance knowledge and skillset by completing <br><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2022 Web Development Bootcamp</a>
+    Learner and skilled programmer looking to enhance knowledge and skillset by completing <br><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2022 Web Development Bootcamp</a>
 course on Udemy created by the <a href="https://appbrewery.com/">App Brewery</a> .
   </p>
 
@@ -61,6 +61,7 @@ course on Udemy created by the <a href="https://appbrewery.com/">App Brewery</a>
       </tr>
     </tbody>
   </table>
+  <br>
 
   <strong>Skills</strong><br><br>
   <table border="1" cellpadding="5">
