Added minimal content to indx/html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body onload="loadLinks()">
+  <div class="no-margin">
+
+  </div>
+  <h1>I'm Tom</h1>
+  <p>A programmer</p>
   <p id="links">
 
   </p>
