Updated portfolio site based on lesson 52.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,54 @@
   <script src="scripts/basicLinks.js"></script>
 </head>
 
+<!-- Javascript onload to load links to the same on everypage -->
 <body onload="loadLinks()">
-  <div class="no-margin">
-
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="top-cloud-image">
+    <h1>I'm Tom</h1>
+    <p>A <span class="underlined">prog</span>rammer</p>
+    <img class="bottom-cloud" src="images/cloud.png" alt="bottom-cloud-image">
+    <img src="images/mountain.png" alt="mountain-image">
   </div>
-  <h1>I'm Tom</h1>
-  <p>A programmer</p>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/tom.png" width="200" height="200" alt="tom-img">
+      <h2>Hello.</h2>
+      <p>I am an enthusiastic programmer and software developer, I love a good pizza 🍕 and a nice cup of coffee ☕</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="round-frame" src="images/computer.png" alt="computer-img">
+        <h3>Programming</h3>
+        <p>Having created a multitude of different coding and programming projects, <br>I have been able to get used to multiple different languages, these include:
+            C#, Java, Javascript, Powershell, Python
+        </p>
+      </div>
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <h3>Lorem Ipsum Dolor</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p>© Thomas Myers.</p>
+  </div>
+
   <p id="links">
 
   </p>
