Updated programming skill text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="skill-row">
         <img class="round-frame" src="images/computer.png" alt="computer-img">
         <h3>Programming</h3>
-        <p>Having created a multitude of different coding and programming projects, <br>I have been able to get used to multiple different languages, these include:
+        <p>Having worked on different coding and programming projects for both work and play, <br>I have been able to get used to multiple different languages, these include:
             C#, Java, Javascript, Powershell, Python
         </p>
       </div>
