Updated page from last lessons in Intermediate CSS, looking half decent

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
   <script src="scripts/basicLinks.js"></script>
+
+  <!--Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&family=Nanum+Gothic+Coding&family=Satisfy&display=swap" rel="stylesheet">
 </head>
 
 <!-- Javascript onload to load links to the same on everypage -->
@@ -14,13 +19,13 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="top-cloud-image">
     <h1>I'm Tom</h1>
-    <p>A <span class="underlined">prog</span>rammer</p>
+    <h2>A <span class="underlined">prog</span>rammer</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="bottom-cloud-image">
     <img src="images/mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="images/tom.png" width="200" height="200" alt="tom-img">
+      <img class="round-frame" src="images/tom.png" alt="tom-img">
       <h2>Hello.</h2>
       <p>I am an enthusiastic programmer and software developer, I love a good pizza 🍕 and a nice cup of coffee ☕</p>
     </div>
@@ -28,36 +33,32 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="round-frame" src="images/computer.png" alt="computer-img">
+        <img class="round-frame float-left" src="images/computer.png" alt="computer-img">
         <h3>Programming</h3>
         <p>Having worked on different coding and programming projects for both work and play, <br>I have been able to get used to multiple different languages, these include:
             C#, Java, Javascript, Powershell, Python
         </p>
       </div>
       <div class="skill-row">
-        <img class="" src="" alt="">
-        <h3>Lorem Ipsum Dolor</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <img class="round-frame float-right" src="images/jigsaw.jpg" alt="">
+        <h3>Problem Solving</h3>
+        <p>An essential skill for all anyone working in a technical space, allowing to fully utilise whatever resources available to achieve goals</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <h3>I look forward too hearing from you!</h3>
+      <p></p>
       <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
     </div>
   </div>
 
   <div class="bottom-container">
-
+    <p id="links"></p>
     <p>© Thomas Myers.</p>
-    <p id="links">
-
-    </p>
+    <a class="visible-link" href="https://www.freepik.com/free-vector/illustration-jigsaw-icon_2606569.htm#query=puzzle&position=0&from_view=keyword">Jigsaw Image by rawpixel.com</a> on Freepik
   </div>
-
-
 </body>
 
 </html>
